Todos los link funcionando

--- a/core/templates/core/formulario.html
+++ b/core/templates/core/formulario.html
@@ -30,25 +30,25 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                            <a class="nav-link active" aria-current="page" href="{% static '../' %}">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pinturas.html">Pintura</a>
+                            <a class="nav-link" href="{% static '../pinturas' %}">Pintura</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% static '../formulario' %}">Formulario</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="esculturas.html">Escultura</a>
+                            <a class="nav-link" href="{% static '../esculturas' %}">Escultura</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="orfebreria.html">Orfebrería</a>
+                            <a class="nav-link" href="{% static '../orfebreria' %}">Orfebrería</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="tejidos.html">Tejido</a>
+                            <a class="nav-link" href="{% static '../tejidos' %}">Tejido</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="expresiones-artisticas.html">Otras Expresiones</a>
+                            <a class="nav-link" href="{% static '../expresiones_artisticas' %}">Otras Expresiones</a>
                         </li>                        
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
