--- a/core/templates/core/expresiones-artisticas.html
+++ b/core/templates/core/expresiones-artisticas.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="es">    
   <head>
-    <!-- Required meta tags -->
+    {% load static %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="image/logo_01.png">
+    <link rel="shortcut icon" href="{% static 'core/image/logo_01.png' %}">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link href="css/style.css" rel="stylesheet">
-    <title>Tejidos</title>
+    <link href="{% static 'core/css/style.css' %}" rel="stylesheet">
+    <title>Otras Expresiones Artisticas</title>
   </head>
   <body>
     <!-- Cabecera -->
@@ -16,8 +16,8 @@
         <!-- NavBar -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
-                    <img src="image/logo_01.png" alt="Grupo Cero" width="30" height="30" class="d-inline-block align-text-top">
+                <a class="navbar-brand" href="{% static '../' %}">
+                    <img src="{% static 'core/image/logo_01.png' %}" alt="Grupo Cero" width="30" height="30" class="d-inline-block align-text-top">
                     Grupo Cero
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,29 +27,29 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
+                            <a class="nav-link" aria-current="page" href="{% static '../' %}">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pinturas.html">Pintura</a>
+                            <a class="nav-link" href="{% static '../pinturas' %}">Pintura</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="esculturas.html">Escultura</a>
+                            <a class="nav-link" href="{% static '../esculturas' %}">Escultura</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="orfebreria.html">Orfebrería</a>
+                            <a class="nav-link" href="{% static '../orfebreria' %}">Orfebrería</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="tejidos.html">Tejido</a>
+                            <a class="nav-link" href="{% static '../tejidos' %}">Tejido</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="expresiones-artisticas.html">Otras Expresiones</a>
+                            <a class="nav-link active" href="{% static '../expresiones_artisticas' %}">Otras Expresiones</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Productos
+                           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Agregar Nuevo
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Categoría</a></li>
+                                <li><a class="dropdown-item" href="{% static '../nueva_categoria' %}">Categoría</a></li>
                                 <li><a class="dropdown-item" href="#">Artista</a></li>
                             </ul>
                         </li>                        
@@ -63,7 +63,7 @@
                     <!-- user login -->
                     <div class="flex-shrink-0 dropdown">
                         <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle show" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="true">
-                          <img src="image/login-user.png" alt="mdo" class="rounded-circle" width="32" height="32">
+                          <img src="{% static 'core/image/login-user.png' %}" alt="mdo" class="rounded-circle" width="32" height="32">
                         </a>
                         <ul class="dropdown-menu text-small shadow show" aria-labelledby="dropdownUser2" style="position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate(-112px, 34px);" data-popper-placement="bottom-end">
                           <li><a class="dropdown-item" href="#">Nuevo Proyecto...</a></li>
@@ -96,7 +96,7 @@
             <div class="row align-items-md-stretch mt-3">
                 <div class="col-md-6">
                 <div class="p-5 text-white bg-dark rounded-3">
-                    <img src="image/portada/portada_05.jpg" class="img-fluid" alt="Orfebrería">                    
+                    <img src="{% static 'core/image/portada/portada_05.jpg' %}" class="img-fluid" alt="Otras Expresiones Artisticas">                    
                 </div>
                 </div>
                 <div class="col-md-6">
@@ -115,12 +115,12 @@
             <div class="row row-cols-lg-3 align-items-stretch py-2">
                 <!--CARD 1-->
                 <div class="col mt-2">
-                    <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('image/gallery/expresiones-artisticas_01.jpg');">
-                    <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                    <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('{% static 'core/image/gallery/expresiones-artisticas_01.jpg' %}');">
+                    <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">                  
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Barberia Grupo Cero</h2>
                         <ul class="d-flex list-unstyled mt-auto fs-5 mb-4 text-dark">
                         <li class="me-auto">
-                            <img src="image/logo_01.png" alt="Bootstrap" class="rounded-circle border border-white" width="32" height="32">
+                            <img src="{% static 'core/image/logo_01.png' %}" alt="Bootstrap" class="rounded-circle border border-white" width="32" height="32">
                         </li>
                         <li class="d-flex align-items-center me-3">
                             <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"></use></svg>
@@ -136,12 +136,12 @@
                 </div>
                 <!--CARD 2-->
                 <div class="col mt-2">
-                    <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('image/gallery/expresiones_artisticas_02.jpg');">
+                    <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('{% static 'core/image/gallery/expresiones_artisticas_02.jpg' %}');">
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Piercing Grupo Cero</h2>
                         <ul class="d-flex list-unstyled mt-auto fs-5 mb-4 text-dark">
                         <li class="me-auto">
-                            <img src="image/logo_01.png" alt="Bootstrap" class="rounded-circle border border-white" width="32" height="32">
+                            <img src="{% static 'core/image/logo_01.png' %}" alt="Bootstrap" class="rounded-circle border border-white" width="32" height="32">
                         </li>
                         <li class="d-flex align-items-center me-3">
                             <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"></use></svg>
@@ -157,12 +157,12 @@
                 </div>
                 <!--CARD 3-->
                 <div class="col mt-2">
-                    <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('image/gallery/expresiones_artísticas_03.jpg');">
+                    <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('{% static 'core/image/gallery/expresiones_artisticas_03.jpg' %}');">
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Tatto Grupo Cero</h2>
                         <ul class="d-flex list-unstyled mt-auto fs-5 mb-4 text-dark">
                         <li class="me-auto">
-                            <img src="image/logo_01.png" alt="Bootstrap" class="rounded-circle border border-white" width="32" height="32">
+                            <img src="{% static 'core/image/logo_01.png' %}" alt="Bootstrap" class="rounded-circle border border-white" width="32" height="32">
                         </li>
                         <li class="d-flex align-items-center me-3">
                             <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"></use></svg>
@@ -265,14 +265,14 @@
     <!-- Pie de página -->
     <footer class="footer mt-auto py-3 bg-dark mt-3">
         <div class="container">
-          <span class="text-muted">Grupo Cero 2021 - © Copyrith Claudio Rigollet Meléndez.</span>
+          <span class="text-muted">Grupo Cero 2021 - © Copyrith Claudio Rigollet - Cristian Gutiérrez - Mayron Guevara.</span>
         </div>
     </footer>
       
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
+    <script src="{% static 'core/js/script.js' %}"></script>
     
   </body>
 </html>
