--- a/core/templates/core/nueva-categoria.html
+++ b/core/templates/core/nueva-categoria.html
@@ -1,14 +1,15 @@
 <!doctype html>
 <html lang="es">    
   <head>
+    {% load static %}
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="image/logo_01.png">
+    <link rel="shortcut icon" href="{% static 'core/image/logo_01.png' %}">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link href="css/style.css" rel="stylesheet">
-    <title>Pinturas</title>
+    <link href="{% static 'core/css/style.css' %}" rel="stylesheet">
+    <title>Nueva Categoría</title>
   </head>
   <body>
     <!-- Cabecera -->
@@ -16,8 +17,8 @@
         <!-- NavBar -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
-                    <img src="image/logo_01.png" alt="Grupo Cero" width="30" height="30" class="d-inline-block align-text-top">
+                <a class="navbar-brand" href="{% static '../' %}">
+                    <img src="{% static 'core/image/logo_01.png' %}" alt="Grupo Cero" width="30" height="30" class="d-inline-block align-text-top">
                     Grupo Cero
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,35 +28,32 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
+                            <a class="nav-link" aria-current="page" href="{% static '../' %}">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pinturas.html">Pintura</a>
+                            <a class="nav-link" href="{% static '../pinturas' %}">Pintura</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="esculturas.html">Escultura</a>
+                            <a class="nav-link" href="{% static '../esculturas' %}">Escultura</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="orfebreria.html">Orfebrería</a>
+                            <a class="nav-link" href="{% static '../orfebreria' %}">Orfebrería</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="tejidos.html">Tejido</a>
+                            <a class="nav-link" href="{% static '../tejidos' %}">Tejido</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="expresiones-artisticas.html">Otras Expresiones</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="nueva-categoria.html">Categoría</a>
-                        </li>
+                            <a class="nav-link" href="{% static '../expresiones_artisticas' %}">Otras Expresiones</a>
+                        </li>                        
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Agregar Nuevo
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="nueva-categoria.html">Categoría</a></li>
+                                <li><a class="dropdown-item" href="{% static '../nueva_categoria' %}">Categoría</a></li>
                                 <li><a class="dropdown-item" href="#">Artista</a></li>
                             </ul>
-                        </li>                        
+                        </li>                       
                     </ul>
                     <form class="d-flex">
                         <!-- Buscar -->
@@ -66,7 +64,7 @@
                     <!-- user login -->
                     <div class="flex-shrink-0 dropdown">
                         <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle show" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="true">
-                          <img src="image/login-user.png" alt="mdo" class="rounded-circle" width="32" height="32">
+                          <img src="{% static 'core/image/login-user.png' %}" alt="mdo" class="rounded-circle" width="32" height="32">
                         </a>
                         <!--
                         <ul class="dropdown-menu text-small shadow show" aria-labelledby="dropdownUser2" style="position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate(-112px, 34px);" data-popper-placement="bottom-end">
@@ -114,7 +112,7 @@
                         <div class="h-100 p-3 bg-light border rounded-3">
                             <div class="col-12 w-50 mx-auto" >
                                 <div class="card text-center">
-                                    <img id="image-upload" src="image/subir-imagen.jpg" class="card-img-top" alt="Nueva Categoría">                                
+                                    <img id="image-upload" src="{% static 'core/image/subir-imagen.jpg' %}" class="card-img-top" alt="Nueva Categoría">                                
                                     <div class="card-footer d-grid gap-1">                                    
                                         <button id="btn-imagen" class="btn btn-outline-secondary" type="button">Subir Imagen</button>
                                     </div>
@@ -207,15 +205,16 @@
     <!-- Pie de página -->
     <footer class="footer mt-auto py-3 bg-dark mt-3">
         <div class="container">
-          <span class="text-muted">Grupo Cero 2021 - © Copyrith Claudio Rigollet Meléndez.</span>
+          <span class="text-muted">Grupo Cero 2021 - © Copyrith Claudio Rigollet - Cristian Gutiérrez - Mayron Guevara.</span>
         </div>
     </footer>
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://widget.cloudinary.com/v2.0/global/all.js"></script>    
-    <script src="js/servicio.js"></script>
+    <script src="{% static 'core/js/servicio.js' %}"></script>
+    
     <!--<script src="js/api.js"></script>-->
   </body>
 </html>
