--- a/core/templates/core/editar.html
+++ b/core/templates/core/editar.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     
-    <title>Lista de Formularios</title>
+    <title>Editar Formulario</title>
   </head>
   <body>
     
@@ -139,37 +139,27 @@
         <!-- /NavBar -->
      
         <!-- Información De Correos -->
-        <div class="container-fluid mt-2"> 
-            <div class="alert alert-success" role="alert">
-                <h4 class="alert-heading">Lista de correos enviados</h4>                
-                <hr>
-                <p class="mb-0"><Strong>información de los Mensajes</Strong></p>
-                <table class="table">
-                    <thead>                                       
-                    <tr>
-                        <th scope="col">Nombre</th>
-                        <th scope="col">Correo</th>
-                        <th scope="col">Asunto</th>
-                        <th scope="col">Mensaje</th>
-                        <th scope="col">Opciones</th>
-                    </tr>                                      
-                    </thead>
-                     {%for co in contactos%}
-                    <tbody id="tbody-mensaje">
-                        <td>{{co.nombre}}</td>
-                        <td>{{co.correo}}</td>
-                        <td>{{co.asunto}}</td>
-                        <td>{{co.mensaje}}</td>                            
-                        <td>
-                            <a href="{% url 'modificar' co.nombre %}" class="btn btn-success btn-sm" tabindex="-1" role="button" aria-disabled="true">Editar</a>
-                            <a href="{% url 'eliminar' co.nombre %}" class="btn btn-danger btn-sm" tabindex="-1" role="button" aria-disabled="true">Eliminar</a>
-                        </td>                            
-                    </tbody>
-                    {%endfor%}
-                </table>
-            </div>
-        </div>
-        
+         <div class="container mt-5">
+            <form action="" method="post" id="formulario">
+                {% csrf_token %}
+                <!--FORM START-->
+                
+                <div class="row">                    
+                    <div class="col-12 form-group">
+                           {{form.as_table}}                
+                    </div>                    
+                </div>
+                
+                <br>
+                <div class="text-center">                    
+                    <input type="submit" class="btn btn-info" id="modificar" value="Modificar">
+                    <a class="nav-link" href="{% static '../formulario' %}">← Volver</a>     
+                </div>
+                <!--FORM END-->                
+                
+            </form>
+            <div class="alert alert-success" role="alert">{{alert}}</div>
+         </div>
         <!-- /Información De Correos -->        
     </main>
 
